# swagger.json
@@ -97,7 +97,7 @@
           "Fecha_modificacion": {
             "format": "date-time",
             "type": "string",
-            "default": "2022-05-28T17:49:44.388Z"
+            "default": "2022-06-05T04:23:37.102Z"
           },
           "Activo": {
             "type": "boolean",
@@ -241,7 +241,7 @@
           "Fecha_modificacion": {
             "format": "date-time",
             "type": "string",
-            "default": "2022-05-28T17:49:44.410Z"
+            "default": "2022-06-05T04:23:37.123Z"
           },
           "Activo": {
             "type": "boolean",
@@ -291,7 +291,7 @@
           "Fecha_Modificacion": {
             "format": "date-time",
             "type": "string",
-            "default": "2022-05-28T17:49:44.417Z"
+            "default": "2022-06-05T04:23:37.131Z"
           },
           "Activo": {
             "type": "boolean",
@@ -422,7 +422,7 @@
           "Fecha_modificacion": {
             "format": "date-time",
             "type": "string",
-            "default": "2022-05-28T17:49:44.420Z"
+            "default": "2022-06-05T04:23:37.135Z"
           },
           "Activo": {
             "type": "boolean",
@@ -492,6 +492,185 @@
           "ValorDevolucion",
           "Estado",
           "OrdenesPago",
+          "MovimientoContable"
+        ]
+      },
+      "DocumentosBeneficiarioDto": {
+        "type": "object",
+        "properties": {
+          "NombreArchivo": {
+            "type": "string"
+          },
+          "TamañoArchivo": {
+            "type": "string"
+          },
+          "UID": {
+            "type": "string"
+          },
+          "Estado": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "NombreArchivo",
+          "TamañoArchivo",
+          "UID",
+          "Estado"
+        ]
+      },
+      "MovimientoContableOrDevDto": {
+        "type": "object",
+        "properties": {
+          "Secuencia": {
+            "type": "number"
+          },
+          "Codigo": {
+            "type": "string"
+          },
+          "Nombre": {
+            "type": "string"
+          },
+          "Naturaleza": {
+            "type": "string"
+          },
+          "Credito": {
+            "type": "number",
+            "default": 0
+          },
+          "Debito": {
+            "type": "number",
+            "default": 0
+          },
+          "Tercero": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "Secuencia",
+          "Codigo",
+          "Nombre",
+          "Naturaleza",
+          "Credito",
+          "Debito",
+          "Tercero"
+        ]
+      },
+      "OrdenDevolucionDto": {
+        "type": "object",
+        "properties": {
+          "Fecha_creacion": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "Fecha_modificacion": {
+            "format": "date-time",
+            "type": "string",
+            "default": "2022-06-05T04:23:37.145Z"
+          },
+          "Activo": {
+            "type": "boolean",
+            "default": true
+          },
+          "AreaFuncional": {
+            "type": "number"
+          },
+          "TipoDocumentoSolicitante": {
+            "type": "number"
+          },
+          "NumeroDocumentoSolicitante": {
+            "type": "string"
+          },
+          "FechaRequerimiento": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "NombreSolicitante": {
+            "type": "string"
+          },
+          "Cargo": {
+            "type": "string"
+          },
+          "NumeroRequerimiento": {
+            "type": "number"
+          },
+          "Concepto": {
+            "type": "string"
+          },
+          "RazonDevolucion": {
+            "type": "number"
+          },
+          "ValorDevolucion": {
+            "type": "number"
+          },
+          "TipoDocumentoBeneficiario": {
+            "type": "number"
+          },
+          "NumeroDocumentoBeneficiario": {
+            "type": "string"
+          },
+          "NombreBeneficiario": {
+            "type": "string"
+          },
+          "Banco": {
+            "type": "number"
+          },
+          "TipoCuenta": {
+            "type": "number"
+          },
+          "NumeroCuenta": {
+            "type": "string"
+          },
+          "FormaPago": {
+            "type": "number"
+          },
+          "DocumentosBeneficiario": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/DocumentosBeneficiarioDto"
+            }
+          },
+          "TipoComprobante": {
+            "type": "string"
+          },
+          "NumeroComprobante": {
+            "type": "number"
+          },
+          "Consecutivo": {
+            "type": "number"
+          },
+          "Estado": {
+            "type": "string"
+          },
+          "MovimientoContable": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/MovimientoContableOrDevDto"
+            }
+          }
+        },
+        "required": [
+          "AreaFuncional",
+          "TipoDocumentoSolicitante",
+          "NumeroDocumentoSolicitante",
+          "FechaRequerimiento",
+          "NombreSolicitante",
+          "Cargo",
+          "NumeroRequerimiento",
+          "Concepto",
+          "RazonDevolucion",
+          "ValorDevolucion",
+          "TipoDocumentoBeneficiario",
+          "NumeroDocumentoBeneficiario",
+          "NombreBeneficiario",
+          "Banco",
+          "TipoCuenta",
+          "NumeroCuenta",
+          "FormaPago",
+          "DocumentosBeneficiario",
+          "TipoComprobante",
+          "NumeroComprobante",
+          "Consecutivo",
+          "Estado",
           "MovimientoContable"
         ]
       }
@@ -1185,6 +1364,181 @@
         },
         "tags": [
           "devolucion-tributaria"
+        ]
+      }
+    },
+    "/orden-devolucion": {
+      "post": {
+        "operationId": "OrdenDevolucionController_post",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/OrdenDevolucionDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "orden-devolucion"
+        ]
+      },
+      "get": {
+        "operationId": "OrdenDevolucionController_get",
+        "parameters": [
+          {
+            "name": "query",
+            "required": false,
+            "in": "query",
+            "description": "query - Filter. e.g. col1:v1,col2:v2 …",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "fields",
+            "required": false,
+            "in": "query",
+            "description": "fields - Fields returned. e.g. col1,col2 …",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortby",
+            "required": false,
+            "in": "query",
+            "description": "sortby - Sorted-by fields. e.g. col1,col2 …",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "order",
+            "required": false,
+            "in": "query",
+            "description": "order - Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc …",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "description": "limit - Limit the size of result set. Must be an integer",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "offset",
+            "required": false,
+            "in": "query",
+            "description": "offset - Start position of result set. Must be an integer",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "populate",
+            "required": false,
+            "in": "query",
+            "description": "populate - show subqueries. Must be a boolean",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "orden-devolucion"
+        ]
+      }
+    },
+    "/orden-devolucion/{id}": {
+      "get": {
+        "operationId": "OrdenDevolucionController_getById",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "orden-devolucion"
+        ]
+      },
+      "put": {
+        "operationId": "OrdenDevolucionController_put",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/OrdenDevolucionDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "orden-devolucion"
+        ]
+      },
+      "delete": {
+        "operationId": "OrdenDevolucionController_delete",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "orden-devolucion"
         ]
       }
     }
